# detailedImageCaption

./: LICENSE  README.md
camp_lejune_ros_version/scene-description/: CMakeLists.txt  package.xml  requirements.txt  setup.py
camp_lejune_ros_version/scene-description/launch/: scene_description 2.launch  scene_description.launch
camp_lejune_ros_version/scene-description/models/classifier/: .gitattributes  4000-21.data-00000-of-00001  4000-21.index
camp_lejune_ros_version/scene-description/models/human_classifier/: .gitattributes  42-8.data-00000-of-00001  42-8.index
camp_lejune_ros_version/scene-description/models/model/: .gitattributes
camp_lejune_ros_version/scene-description/models/model/model2/: .gitattributes  model_max-95960.data-00000-of-00001  model_max-95960.index
camp_lejune_ros_version/scene-description/models/model/model_lejeune/: .gitattributes  model_max.data-00000-of-00001  model_max.index
camp_lejune_ros_version/scene-description/models/resnet/: .gitattributes  4000-20.data-00000-of-00001  4000-20.index
camp_lejune_ros_version/scene-description/models/train/: multi_class_labels_list.pkl  word_to_idx.pkl
camp_lejune_ros_version/scene-description/msg/: ModuleMessage.msg  ModuleMessageArray.msg
camp_lejune_ros_version/scene-description/nodes/: ros_caption.py  ros_caption2.py
camp_lejune_ros_version/scene-description/src/captioner/: ros_caption_model.py  ros_caption_model2.py  ros_caption_model_old.py  utils.py
camp_lejune_ros_version/scene-description/srv/: SceneDescription.srv
modular_captioning/evaluation/: Eval.ipynb
(+59 files in other folders)
